--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakies Cafe</title>
+    <title>Flexbox-Navigation</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    Test Index
+    <header>
+        <nav>
+            <ul class="menu">
+                <li class="logo"><a href="#">Bakies Cafe</a></li>
+                <li class="item"><a href="#">Home</a></li>
+                <li class="item"><a href="#">About</a></li>
+                <li class="item has-submenu">
+                    <a tabindex="0">Services</a>
+                    <ul class="submenu">
+                        <li class="subitem"><a href="#">Wedding</a></li>
+                        <li class="subitem"><a href="#">Corporate Events</a></li>
+                        <li class="subitem"><a href="#">Private Parties</a></li>
+                    </ul>
+                </li>
+                <li class="item"><a href="#">Contacts</a></li>
+                <li class="item button"><a href="#">Log In</a></li>
+                <li class="item button secondary"><a href="#">Sign Up</a></li>
+                <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+            </ul>
+        </nav>
+    </header> 
 </body>
 </html>
