Edited and added some info

--- a/about-us.html
+++ b/about-us.html
@@ -8,25 +8,25 @@
 <body>
     <div class="container">
         <h2>About Us</h2>
+        <p>A former OFW, who discovered his love for baking while 
+            working in a hotel in Macau and went on to establish his 
+            successful online cakeshop Bakiescafe, in the small island 
+            of Catanduanes in Virac.
+        </p>
+        <p>A passionate and determined individual, embarked on a 
+            journey that would forever change his life. The path that 
+            would lead him to discover his true passion for baking.
+        </p>
         <h3>Mission</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Veritatis similique odio totam facere a laborum sapiente officiis 
-                necessitatibus nihil illum natus alias, harum veniam modi cum aliquid. 
-                Ad, quibusdam doloribus!</p>
+            <p>Bakiescafe draws its mission to be a go-to bakeshop in Catanduanes
+                that can satisfy each Catnadunganon's sweet cravings.
+            </p>
         <h3>Vision</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Repudiandae reprehenderit dignissimos possimus magnam dolorum, 
-                assumenda quam aliquam. Aperiam, ullam libero doloribus ut voluptatum 
-                totam? Dolor sit cupiditate consequuntur voluptatum temporibus?</p>
-    </div>
-    <div class="container">
-        <h2>Our Team</h2>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card">
-                    <img src="image1.jpg" alt="Vic" style="width:100%">
-                    <div class="container">
-                        <h4><b>Vic B. Vargas</b></h4>
+            <p>Bakiescafe envisions itself as a consistent front runner in the sweets
+                and pastries, and events catering industries in the island where it
+                could be known as having the best-tasting sweet offerings, products
+                with highest value for money, and work ethics that is worthy of emulation.
+            </p>
     </div>
 </body>
 </html>
