--- a/menus.html
+++ b/menus.html
@@ -6,6 +6,57 @@
     <title>Menus</title>
 </head>
 <body>
-   
+   <div id="menu">
+        <h2>Cakes</h2>
+            <div class="menu-item">
+                <img src="chocolate.jpg" alt="Chocolate Cake">
+                <h3>Chocolate Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="red-velvet.jpg" alt="Red Velvet Cake">
+                <h3>Red Velvet Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="birthday.jpg" alt="Birthday Cake">
+                <h3>Birthday Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="wedding.jpg" alt="Wedding Cake">
+                <h3>Wedding Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="bento.jpg" alt="Bento Cake">
+                <h3>Bento Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="number.jpg" alt="Number Cake">
+                <h3>Number Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="twin.jpg" alt="Twin Cake">
+                <h3>Twin Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+            <div class="menu-item">
+                <img src="naked.jpg" alt="Naked Cake">
+                <h3>Naked Cake</h3>
+                <p></p>
+                <button>View Product</button>
+            </div>
+   </div>
+   </div>
 </body>
 </html>
