--- a/services.html
+++ b/services.html
@@ -9,28 +9,27 @@
     <div class="menu-tub">
         <img src="wedding.jpg" alt="Wedding">
         <h3>Wedding</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nisi a nihil, ipsam ut vitae reprehenderit doloribus! Minus aut 
-            temporibus enim, iure nobis quo tempore corporis sapiente 
-            possimus vel rem rerum?</p>
+        <p>Let us sweeten your matrimony with memorable menus. Trust us
+            to make your wedding day unforgettable. To start your order,
+            just click inquire.</p>
         <button>Inquire</button>
     </div>
     <div class="menu-tub">
         <img src="corporate-events.jpg" alt="Corporate_Events">
         <h3>Corporate Events</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nisi a nihil, ipsam ut vitae reprehenderit doloribus! Minus aut 
-            temporibus enim, iure nobis quo tempore corporis sapiente 
-            possimus vel rem rerum?</p>
+        <p>From cakes to pastries, our dessert section has something for everyone.
+            Let us help you create a sweet ending to your corporate events. To
+            start your order, just click inquire.
+        </p>
         <button>Inquire</button>
     </div>
     <div class="menu-tub">
         <img src="private-parties.jpg" alt="Private_parties">
         <h3>Private Parties</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nisi a nihil, ipsam ut vitae reprehenderit doloribus! Minus aut 
-            temporibus enim, iure nobis quo tempore corporis sapiente 
-            possimus vel rem rerum?</p>
+        <p>Creating sweet memories at your private parties. Trust us to deliver
+            exceptional desserts and catering services everytime. To start your
+            order, just click inquire.
+        </p>
         <button>Inquire</button>
     </div>
 </body>
