--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,19 @@
     <title>Contact Us</title>
 </head>
 <body>
-    
+    <div class="contact-info">
+        <h2>Contact us</h2>
+        <p>We are here to help and answer any question you might have. We look forward to hearing from you.</p>
+        <button>Send Message</button>
+    </div>
+    <div>
+        <h3>Other ways to contact Bakies Cafe</h3>
+        <p>Call, email, send us a postcard - whatever works for you</p>
+        <ul>
+            <li>Email: <a href="mailto:bobieraubreynicole@gmail.com">bakiescafe@gmail.com</a></li>
+            <li>Phone: <a href="tel:+63-939-891-5187">+63-939-891-5187</a></li>
+            <li>Address: Deborah St., Zamboanga Farm, Cavinitan, Virac, Catanduanes</li>
+        </ul>
+    </div>
 </body>
 </html>
