--- a/menus.html
+++ b/menus.html
@@ -1,12 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menus</title>
-</head>
-<body>
-   <div id="menu">
+    <link rel="stylesheet" href="assets/fontawesome-free-5/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <section id="header">
+      <a href="index.html"
+        ><img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO"
+      /></a>
+      <div>
+        <ul id="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="menus.html" class="active">Menus</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+          <li id="lg-login">
+            <a href="#"><i class="fas fa-user"></i> Login</a>
+          </li>
+          <a href="#" id="close"><i class="fas fa-times"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="#"><i class="fas fa-user"></i> Login</a>
+        <i id="bar" class="fas fa-bars"></i>
+      </div>
+    </section>
+
+    <section class="page-header">
+      <h2>Menus</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </section>
+
+    <section class="section-p1" id="menu">
+      <!-- <h2>Featured Menus</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+      <div class="menu-container">
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Chocolate Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Red Velvet Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Birthday Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Wedding Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Bento Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Number Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Twin Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+
+        <div class="menu1">
+          <img
+            src="assets/images/featured/73f3ff257e3061746011296129eb4cf4.webp"
+            alt="SERVICES"
+          />
+          <div class="menu-desc">
+            <h5>Naked Cake</h5>
+            <button class="normal">ORDER NOW</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr class="horizontal" />
+
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Address:</strong> Deborah St., Zamboanga Farm, Cavinitan,
+          Virac, Catanduanes
+        </p>
+        <p><strong>Email:</strong> bakiescafe@gmail.com</p>
+        <p><strong>Phone:</strong> +63-939-891-5187</p>
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-tiktok"></i>
+            <i class="fab fa-pinterest-p"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="about-us.html">About Us</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="#">Terms & Condition</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Login</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="assets/images/app.jpg" alt="" />
+          <img src="assets/images/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="assets/images/pay.png" alt="" />
+      </div>
+    </footer>
+
+    <div class="copyright">
+      <p>Copyright &copy; 2023, Bakies Cafe</p>
+    </div>
+
+    <script src="assets/js/script.js"></script>
+    <!-- <div id="menu">
         <h2>Cakes</h2>
             <div class="menu-item">
                 <img src="chocolate.jpg" alt="Chocolate Cake">
@@ -57,6 +236,6 @@
                 <button>View Product</button>
             </div>
    </div>
-   </div>
-</body>
+   </div> -->
+  </body>
 </html>
