--- a/contact-us.html
+++ b/contact-us.html
@@ -4,9 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="assets/fontawesome-free-5/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    <div class="contact-info">
+    <section id="header">
+        <a href="index.html"
+          ><img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO"
+        /></a>
+        <div>
+          <ul id="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="menus.html">Menus</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html" class="active">Contact Us</a></li>
+            <li id="lg-login">
+              <a href="#"><i class="fas fa-user"></i> Login</a>
+            </li>
+            <a href="#" id="close"><i class="fas fa-times"></i></a>
+          </ul>
+        </div>
+        <div id="mobile">
+          <a href="#"><i class="fas fa-user"></i> Login</a>
+          <i id="bar" class="fas fa-bars"></i>
+        </div>
+      </section>
+  
+      <section class="page-header">
+        <h2>Contact Us</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </section>
+  
+      <hr class="horizontal" />
+  
+      <footer class="section-p1">
+        <div class="col">
+          <img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO" />
+          <h4>Contact</h4>
+          <p>
+            <strong>Address:</strong> Deborah St., Zamboanga Farm, Cavinitan,
+            Virac, Catanduanes
+          </p>
+          <p><strong>Email:</strong> bakiescafe@gmail.com</p>
+          <p><strong>Phone:</strong> +63-939-891-5187</p>
+          <div class="follow">
+            <h4>Follow Us</h4>
+            <div class="icon">
+              <i class="fab fa-facebook"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-tiktok"></i>
+              <i class="fab fa-pinterest-p"></i>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col">
+          <h4>About</h4>
+          <a href="about-us.html">About Us</a>
+          <a href="contact-us.html">Contact Us</a>
+          <a href="#">Terms & Condition</a>
+        </div>
+  
+        <div class="col">
+          <h4>My Account</h4>
+          <a href="#">Login</a>
+          <a href="#">Track My Order</a>
+          <a href="#">Help</a>
+        </div>
+  
+        <div class="col install">
+          <h4>Install App</h4>
+          <p>From App Store or Google Play</p>
+          <div class="row">
+            <img src="assets/images/app.jpg" alt="" />
+            <img src="assets/images/play.jpg" alt="" />
+          </div>
+          <p>Secured Payment Gateways</p>
+          <img src="assets/images/pay.png" alt="" />
+        </div>
+      </footer>
+  
+      <div class="copyright">
+        <p>Copyright &copy; 2023, Bakies Cafe</p>
+      </div>
+  
+      <script src="assets/js/script.js"></script>
+    <!-- <div class="contact-info">
         <h2>Contact us</h2>
         <p>We are here to help and answer any question you might have. We look forward to hearing from you.</p>
         <button>Send Message</button>
@@ -19,6 +104,6 @@
             <li>Phone: <a href="tel:+63-939-891-5187">+63-939-891-5187</a></li>
             <li>Address: Deborah St., Zamboanga Farm, Cavinitan, Virac, Catanduanes</li>
         </ul>
-    </div>
+    </div> -->
 </body>
 </html>
