--- a/services.html
+++ b/services.html
@@ -1,36 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services</title>
-</head>
-<body>
-    <div class="menu-tub">
-        <img src="wedding.jpg" alt="Wedding">
-        <h3>Wedding</h3>
-        <p>Let us sweeten your matrimony with memorable menus. Trust us
-            to make your wedding day unforgettable. To start your order,
-            just click inquire.</p>
-        <button>Inquire</button>
-    </div>
-    <div class="menu-tub">
-        <img src="corporate-events.jpg" alt="Corporate_Events">
-        <h3>Corporate Events</h3>
-        <p>From cakes to pastries, our dessert section has something for everyone.
-            Let us help you create a sweet ending to your corporate events. To
-            start your order, just click inquire.
+    <link rel="stylesheet" href="assets/fontawesome-free-5/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <section id="header">
+      <a href="index.html"
+        ><img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO"
+      /></a>
+      <div>
+        <ul id="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="menus.html">Menus</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+          <li id="lg-login">
+            <a href="#"><i class="fas fa-user"></i> Login</a>
+          </li>
+          <a href="#" id="close"><i class="fas fa-times"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="#"><i class="fas fa-user"></i> Login</a>
+        <i id="bar" class="fas fa-bars"></i>
+      </div>
+    </section>
+
+    <section class="page-header">
+      <h2>Services</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </section>
+
+    <hr class="horizontal" />
+
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="assets/images/sample-logo@2x.png" alt="LOGO" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Address:</strong> Deborah St., Zamboanga Farm, Cavinitan,
+          Virac, Catanduanes
         </p>
-        <button>Inquire</button>
+        <p><strong>Email:</strong> bakiescafe@gmail.com</p>
+        <p><strong>Phone:</strong> +63-939-891-5187</p>
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-tiktok"></i>
+            <i class="fab fa-pinterest-p"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="about-us.html">About Us</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="#">Terms & Condition</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Login</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="assets/images/app.jpg" alt="" />
+          <img src="assets/images/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="assets/images/pay.png" alt="" />
+      </div>
+    </footer>
+
+    <div class="copyright">
+      <p>Copyright &copy; 2023, Bakies Cafe</p>
     </div>
-    <div class="menu-tub">
-        <img src="private-parties.jpg" alt="Private_parties">
-        <h3>Private Parties</h3>
-        <p>Creating sweet memories at your private parties. Trust us to deliver
-            exceptional desserts and catering services everytime. To start your
-            order, just click inquire.
-        </p>
-        <button>Inquire</button>
-    </div>
-</body>
+
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
